# dcv

./: .env.example  .gitignore  AGENTS.md  README.md  dcv_custom.css  justfile  pyproject.toml
.github/workflows/: run-local-tests.yml
src/dcv/: __main__.py  container.py  errors.py  main.py
src/dcv/assets/: md-to-pdf-config.js
src/dcv/assets/styles/: pdf.css
src/dcv/assets/templates/: base.html  base.html.jinja
src/dcv/commands/: __init__.py  converter.py  md2pdf.py  pdf2md.py  scaffold.py  validate_options.py
src/dcv/config/: settings.py
src/dcv/core/: container.py
src/dcv/protocols/: converter_protocol.py
src/dcv/services/: __init__.py  file_manager.py  md_converter.py  md_handler.py  pdf_converter.py  pdf_handler.py
tests/: conftest.py
tests/fixtures/: academic_style.css  custom_style.css  sample.md  sample_with_math.md
tests/intg/: conftest.py  test_cli_commands.py  test_container.py  test_interactions.py  test_md2pdf_conversion.py  test_pdf2md_conversion.py  test_scaffold_command.py
tests/unit/: conftest.py  test_file_manager.py  test_md_converter.py  test_md_handler.py  test_pdf_converter.py  test_pdf_handler.py
