[project]
name = "dcv"
version = "0.3.0"
description = "Document Converter CLI - PDF to Markdown and Markdown to PDF conversion tool (pure Python)."
requires-python = ">=3.10"
dependencies = [
    "pydantic-settings>=2.0.0",
    "python-dotenv==1.0.1",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "markitdown[pdf]>=0.1.0",
    "playwright>=1.40.0",
    "markdown-it-py>=3.0.0",
    "jinja2>=3.1.0",
]

[project.scripts]
dcv = "dcv.main:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-playwright>=0.4.0",
    "ruff>=0.6.1",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dcv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["."]
addopts = "-q -s --tb=short"

[tool.ruff]
target-version = "py312"
exclude = [
    "__pycache__",
    "migrations",
    "db.sqlite3",
    "*.pyc",
    ".uv-cache",
    ".cache",
    "*/.cache/*",
    ".venv",
    "venv",
    "env",
    "*/bin/**",
    "*/lib/**",
    "*/share/**",
    "*/etc/**",
    "*/pyvenv.cfg"
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
exclude = ["tests/"]